# GenomeVisProject

./: .gitignore  .gitmodules  README.md
data_processing_python/: (old) 09.2_Local_temporal_trend_analysis_of_gene_behavior.ipynb  00_seperate_folder_for_each_time_points.ipynb  01. adding_id_0_bead_data.ipynb  01.1. adding_compartment_centromere.ipynb  01_adding_id0_and_or_idEnd_structure_files.ipynb  02. gff_to_csv_conversion_and_gene_extraction.ipynb  02_gene_info_position_data_extraction.ipynb  03. center_of_mass_and_distance_calculation.ipynb  03_optional_convert_accessibility_to_csv.ipynb  04_accessibility_data_processing.ipynb  04_ata_sec_data_mapping_to_structure_coords.ipynb  05_map_ataSec_peak_to_gene.ipynb  06_hic_matrix_extraction.ipynb  07_map_gene_expression_to_chromosomes.ipynb  08_extract_gene_comparative_expression_per_chromosome.ipynb  09.1_track temporal_change_per_feature_statistical.ipynb  09.2.1_Local_temporal_trend_analysis_of_gene_behavior_infection_induced.ipynb  09.2_Local_temporal_trend_analysis_of_gene_behavior.ipynb  09.2_feature_agreement_direction_encoding.ipynb  12.5_COM.ipynb  (+61 more)
data_processing_python/mpase_package/: pyproject.toml  readme.md
data_processing_python/mpase_package/mpase/: __init__.py  create_grid_planes.py  export_data_for_visd3three.py  export_data_for_visd3three_old.py  hdr_bootstrap.py  io_load.py  main_run.py  metrics_calculation.py  point_alignment.py  point_fraction.py  types.py  visualization_save_image.py
data_processing_python/mpase_package/mpase.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+6191 files in other folders)
