[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpase"
version = "0.1.0"
description = "MultiPointAlignmentShapeExtractor: align multiple 3D point clouds, extract HDR and point-fraction shapes, and export visuals/data."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Md Nafiul Nipu", email = "mnipu2@uic.edu"}]
keywords = ["point cloud", "alignment", "HDR", "KDE", "silhouette", "3D", "shape"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
  "numpy>=1.23",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-image>=0.21",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "black>=24.0.0",
  "ruff>=0.6.0",
  "mypy>=1.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mpase*"]
